--- a/template/package.json
+++ b/template/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "{{ name }}",
-  "description": "{{ description }}",
+  "name": "jenbo",
+  "description": "vue demo",
   "version": "1.0.0",
-  "author": "{{ author }}",
-  "license": "{{ license }}",
+  "author": "jenny bormacoff",
+  "license": "",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "heroku-postbuild": "yarn run build"
   },
   "dependencies": {
     "vue": "^2.5.11"
@@ -25,11 +26,10 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
-    {{#sass}}
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
-    {{/sass}}
     "vue-loader": "^13.0.5",
+    "vue-svg-loader": "^0.5.0",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
