--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "start": "node server/server.js",
     "heroku-postbuild": "yarn run build"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "vue": "^2.5.11"
   },
   "browserslist": [
