--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
+    "normalize.css": "^8.0.0",
     "vue": "^2.5.11"
   },
   "browserslist": [
